Fix title-date overlap on My Claims page

--- a/src/pages/my-claims/my-claims.scss
+++ b/src/pages/my-claims/my-claims.scss
@@ -87,6 +87,10 @@ page-my-claims {
         font-size: type-scale(0);
         font-weight: weight(bold);
         color: color($colors, greyscale, base);
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
+        width: 65%;
       }
 
       p {
